# os_lab_1

./: CMakeLists.txt  README.md
src/: ChildProcess.c  main.c
